se crea get_nivel
ademas de esto, se añade su declaración en swagger
